@@ -18,6 +18,10 @@ Changes in @NEW@:
     * Added types to allow creation of sockets and named pipes via
       conaryclient/newtrove.py code paths
     * The "migrate" command now accepts the "--from-file" option (CNY-3114)
+    * Standalone and apache servers now pull in REST api from the crest
+      project if the code is available. Note that restlib and xobj are
+      required for the crest implementation, and that the "baseUri" must
+      be specified in the server config file (it's normally /conary).
 
 Changes in 2.0.39:
   o Bug Fixes:
